--- a/InvenTree/templates/navbar.html
+++ b/InvenTree/templates/navbar.html
@@ -68,7 +68,7 @@
             <a class='dropdown-toggle' data-toggle='dropdown' href='#'><span class='{{plugin.icon}} icon-header'></span>{{plugin.plugin_name}}</a>
             <ul class='dropdown-menu'>
              {% for nav_item in plugin.navigation %}
-                <li><a href="{% url nav_item.name %}"><span class='{{nav_item.icon}} icon-header'></span>{{nav_item.name}}</a>
+                <li><a href="{% url nav_item.link %}"><span class='{{nav_item.icon}} icon-header'></span>{{nav_item.name}}</a>
              {% endfor %}
             </ul>
           </li>
