--- a/InvenTree/templates/InvenTree/settings/plugin.html
+++ b/InvenTree/templates/InvenTree/settings/plugin.html
@@ -36,6 +36,14 @@
                 {% if settings %}
                     <span class='badge'><a class='nav-toggle text-success' id='select-plugin-{{plugin_key}}'>{% trans 'Has settings' %}</a></span>
                 {% endif %}
+
+                {% define plugin.registered_mixins as mixin_list %}
+                {% if mixin_list %}
+                {% for mixin in mixin_list %}
+                    <span class='badge'><a class='nav-toggle text-success' id='select-plugin-{{plugin_key}}'>
+                        {% blocktrans with name=mixin.human_name%}has {{name}}{% endblocktrans %}</a></span>
+                {% endfor %}
+                {% endif %}
             </td>
             <td># TODO</td>
         </tr>
