--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -38,7 +38,7 @@
 
 {% plugin_list as pl_list %}
 {% for plugin_key, plugin in pl_list.items %}
-    {% if plugin.has_settings %}
+    {% if plugin.registered_mixins %}
         {% include "InvenTree/settings/plugin_settings.html" %}
     {% endif %}
 {% endfor %}
