name refactor to make more concise

--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td><span class='fas fa-code-branch'></span></td>
-                <td>{% trans "Commit Hash" %}</td><td>{{ plugin.commit.commit }}{% include "clip.html" %}</td>
+                <td>{% trans "Commit Hash" %}</td><td>{{ plugin.commit.hash }}{% include "clip.html" %}</td>
             </tr>
             <tr>
                 <td><span class='fas fa-calendar-alt'></span></td>
