--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -40,7 +40,7 @@
         </table>
     </div>
     <div class="col-md-6">
-        <p>{% trans 'This information is pulled from the last git commit for this plugin. It might not reflect official version numbers.' %}</p>
+        <p>{% trans 'This information is pulled from the latest git commit for this plugin. It might not reflect official version numbers.' %}</p>
     </div>
 </div>
 
