clearer status language

--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td><span class='text-{{plugin.sign_color}} fas fa-check'></span></td>
-                <td>{% trans "Commit verified" %}</td>
+                <td>{% trans "Commit Sign Status" %}</td>
                 <td class="bg-{{plugin.sign_color}}">{{ plugin.commit.verified }}</td>
             </tr>
             <tr>
