--- a/InvenTree/templates/InvenTree/settings/navbar.html
+++ b/InvenTree/templates/InvenTree/settings/navbar.html
@@ -132,7 +132,7 @@
     {% for plugin_key, plugin in pl_list.items %}
         {% if plugin.registered_mixins %}
             <li class='list-group-item' title='{{ plugin.plugin_name }}'>
-                <a href='#' class='nav-toggle' id='select-plugin-{{plugin_key}}'>
+                <a href='#' class='text-{{plugin.sign_color}} nav-toggle' id='select-plugin-{{plugin_key}}'>
                     {{ plugin.plugin_name}}
                 </a>
             </li>
