show sign state

--- a/InvenTree/templates/InvenTree/settings/plugin_settings.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_settings.html
@@ -40,7 +40,7 @@
             <tr>
                 <td><span class='text-{{plugin.sign_color}} fas fa-check'></span></td>
                 <td>{% trans "Commit Sign Status" %}</td>
-                <td class="bg-{{plugin.sign_color}}">{{ plugin.commit.verified }}</td>
+                <td class="bg-{{plugin.sign_color}}">{{ plugin.commit.verified }}: {{ plugin.sign_state.msg }}</td>
             </tr>
             <tr>
                 <td><span class='text-{{plugin.sign_color}} fas fa-key'></span></td>
