--- a/InvenTree/company/templates/company/supplier_part_navbar.html
+++ b/InvenTree/company/templates/company/supplier_part_navbar.html
@@ -30,4 +30,11 @@
         </a>
     </li>
 
+    <li class='list-group-item' title='{% trans "Supplier Part Notes" %}'>
+        <a href='#' id='select-note2' class='nav-toggle'>
+            <span class='fas fa-dollar-sign sidebar-icon'></span>
+            {% trans "Notes" %}
+        </a>
+    </li>
+
 </ul>
