--- a/InvenTree/templates/InvenTree/search.html
+++ b/InvenTree/templates/InvenTree/search.html
@@ -117,7 +117,7 @@
         "{% url 'api-part-list' %}",
         {
             params: {
-                search: "{{ query }}",
+                original_search: "{{ query }}",
             },
             checkbox: false,
             disableFilters: true,
@@ -129,7 +129,7 @@
     $("#table-category").inventreeTable({
         url: "{% url 'api-part-category-list' %}",
         queryParams: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
         },
         columns: [
             {
@@ -153,7 +153,7 @@
         "{% url 'api-manufacturer-part-list' %}",
         {
             params: {
-                search: "{{ query }}",
+                original_search: "{{ query }}",
                 part_detail: true,
                 supplier_detail: true,
                 manufacturer_detail: true
@@ -168,7 +168,7 @@
         "{% url 'api-supplier-part-list' %}",
         {
             params: {
-                search: "{{ query }}",
+                original_search: "{{ query }}",
                 part_detail: true,
                 supplier_detail: true,
                 manufacturer_detail: true
@@ -186,7 +186,7 @@
 
     loadBuildTable('#table-build-order', {
         params: {
-            search: '{{ query }}',
+            original_search: '{{ query }}',
         }
     });
 
@@ -200,7 +200,7 @@
     $('#table-stock').inventreeTable({
         url: "{% url 'api-stock-list' %}",
         queryParams: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
             part_detail: true,
             location_detail: true,
         },
@@ -281,7 +281,7 @@
     $("#table-location").inventreeTable({
         url: "{% url 'api-location-list' %}",
         queryParams: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
         },
         columns: [
             {
@@ -307,7 +307,7 @@
 
     loadCompanyTable('#table-manufacturer', "{% url 'api-company-list' %}", {
         params: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
             is_manufacturer: "true",
         }
     });
@@ -317,7 +317,7 @@
 
     loadCompanyTable('#table-supplier', "{% url 'api-company-list' %}", {
         params: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
             is_supplier: "true",
         }
     });
@@ -326,7 +326,7 @@
 
     loadPurchaseOrderTable('#table-purchase-order', {
         params: {
-            search: '{{ query }}',
+            original_search: '{{ query }}',
         }
     });
 
@@ -337,7 +337,7 @@
 
     loadCompanyTable('#table-customer', "{% url 'api-company-list' %}", {
         params: {
-            search: "{{ query }}",
+            original_search: "{{ query }}",
             is_customer: "true",
         }
     });
@@ -346,7 +346,7 @@
 
     loadSalesOrderTable('#table-sales-orders', {
         params: {
-            search: '{{ query }}',
+            original_search: '{{ query }}',
         }
     });
 
