Refactor search results for stock items and locations

--- a/InvenTree/templates/InvenTree/search.html
+++ b/InvenTree/templates/InvenTree/search.html
@@ -183,105 +183,23 @@
 
     addItem('stock', '{% trans "Stock Items" %}', 'fa-boxes');
 
-    $('#table-stock').inventreeTable({
+    loadStockTable($('#table-stock'), {
+        filterKey: 'stocksearch',
         url: "{% url 'api-stock-list' %}",
-        queryParams: {
+        params: {
             original_search: "{{ query }}",
             part_detail: true,
-            location_detail: true,
-        },
-        columns: [
-            {
-                field: 'part',
-                title: "{% trans "Part" %}",
-                sortable: true,
-                formatter: function(value, row) {
-                    var url = `/stock/item/${row.pk}/`;
-                    var thumb = row.part_detail.thumbnail;
-                    var name = row.part_detail.full_name;
-
-                    html = imageHoverIcon(thumb) + renderLink(name, url);
-
-                    return html;
-                }
-            },
-            {
-                field: 'part_description',
-                title: '{% trans "Description" %}',
-                sortable: true,
-                formatter: function(value, row, index, field) {
-                    return row.part_detail.description;
-                }
-            },
-            {
-                field: 'quantity',
-                title: '{% trans "Stock" %}',
-                sortable: true,
-                formatter: function(value, row, index, field) {
-
-                    var val = parseFloat(value);
-
-                    // If there is a single unit with a serial number, use the serial number
-                    if (row.serial && row.quantity == 1) {
-                        val = '# ' + row.serial;
-                    } else {
-                        val = +val.toFixed(5);
-                    }
-
-                    var html = renderLink(val, `/stock/item/${row.pk}/`);
-
-                    return html;
-                }
-            },
-            {
-                field: 'status',
-                title: '{% trans "Status" %}',
-                sortable: 'true',
-                formatter: function(value, row, index, field) {
-                    return stockStatusDisplay(value);
-                },
-            },
-            {
-                field: 'location_detail.pathstring',
-                title: '{% trans "Location" %}',
-                sortable: true,
-                formatter: function(value, row, index, field) {
-                    if (value) {
-                        return renderLink(value, `/stock/location/${row.location}/`);
-                    }
-                    else {
-                        if (row.customer) {
-                            var text = "{% trans "Shipped to customer" %}";
-                            return renderLink(text, `/company/${row.customer}/assigned-stock/`);
-                        } else {
-                            return '<em>{% trans "No stock location set" %}</em>';
-                        }
-                    }
-                }
-            },
-        ]
+            location_detail: true
+        }
     });
 
     addItem('location', '{% trans "Stock Locations" %}', 'fa-map-marker-alt');
 
-    $("#table-location").inventreeTable({
-        url: "{% url 'api-location-list' %}",
-        queryParams: {
+    loadStockLocationTable($("#table-location"), {
+        filterKey: 'locationsearch',
+        params: {
             original_search: "{{ query }}",
         },
-        columns: [
-            {
-                field: 'name',
-                title: '{% trans "Name" %}',
-                formatter: function(value, row, index, field) {
-                    return renderLink(row.pathstring, '/stock/location/' + row.pk + '/');
-                },
-            },
-            {
-                field: 'description',
-                title: '{% trans "Description" %}',
-            },
-        ],
     });
 
     {% endif %}
