Hide submit button in modal when part is still active

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -508,7 +508,8 @@
         launchModalForm(
             "{% url 'part-delete' part.id %}",
             {
-                redirect: {% if part.category %}"{% url 'category-detail' part.category.id %}"{% else %}"{% url 'part-index' %}"{% endif %}
+                redirect: {% if part.category %}"{% url 'category-detail' part.category.id %}"{% else %}"{% url 'part-index' %}"{% endif %},
+                no_post: {% if part.active %}true{% else %}false{% endif %},
             }
         );
     });
