Fix incorrect string (#4555)
Fixes https://github.com/inventree/InvenTree/issues/4547

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -144,7 +144,7 @@
                         {% if not part.active %}
                         &ensp;
                         <div class='badge rounded-pill bg-danger'>
-                            <span class='fas fa-skull-crossbones' title='{% trans "Part is virtual (not a physical part)" %}'></span>
+                            <span class='fas fa-skull-crossbones' title='{% trans "Part is not active" %}'></span>
                             {% trans 'Inactive' %}
                         </div>
                         {% endif %}
