--- a/InvenTree/stock/templates/stock/item_base.html
+++ b/InvenTree/stock/templates/stock/item_base.html
@@ -292,7 +292,7 @@
     </div>
     {% endif %}
 
-    {% for allocation in item.sales_order_allocations.all %}
+    {% for allocation in item.get_sales_order_allocations.all %}
     <div class='alert alert-block alert-info'>
         {% object_link 'so-detail' allocation.line.order.id allocation.line.order as link %}
         {% decimal allocation.quantity as qty %}
@@ -307,12 +307,6 @@
         {% trans "This stock item is allocated to Build Order" %} {{ link }} {% if qty < item.quantity %}({% trans "Quantity" %}: {{ qty }}){% endif %}
     </div>
     {% endfor %}
-
-    {% if item.serialized %}
-    <div class='alert alert-block alert-warning'>
-        {% trans "This stock item is serialized - it has a unique serial number and the quantity cannot be adjusted." %}
-    </div>
-    {% endif %}
 </div>
 {% endblock details %}
 
@@ -326,7 +320,7 @@
             <h5><span class='fas fa-hashtag'></span></h5>
         </td>
         <td>
-            <h5>{% trans "Serial Number" %}</h5>
+            <h5 title='{% trans "This stock item is serialized. It has a unique serial number and the quantity cannot be adjusted" %}'>{% trans "Serial Number" %}</h5>
         </td>
         <td><h5>
             {{ item.serial }}
@@ -373,7 +367,7 @@
     </tr>
     {% elif item.sales_order %}
     <tr>
-        <td><span class='fas fa-user-tie'></span></td>
+        <td><span class='fas fa-th-list'></span></td>
         <td>{% trans "Sales Order" %}</td>
         <td><a href="{% url 'so-detail' item.sales_order.id %}">{{ item.sales_order.reference }}</a> - <a href="{% url 'company-detail' item.sales_order.customer.id %}">{{ item.sales_order.customer.name }}</a></td>
     </tr>
