Update PurchaseOrder page

--- a/InvenTree/order/templates/order/return_order_base.html
+++ b/InvenTree/order/templates/order/return_order_base.html
@@ -274,11 +274,10 @@ $("#barcode-link").click(function() {
 
 $("#barcode-unlink").click(function() {
     unlinkBarcode({
-        retturnorderr: {{ order.pk }},
+        returnorder: {{ order.pk }},
     });
 });
 {% endif %}
-
 {% endif %}
 
 <!-- TODO: Export order callback -->
