--- a/InvenTree/templates/rapidoc.html
+++ b/InvenTree/templates/rapidoc.html
@@ -16,6 +16,12 @@
       allow-spec-url-load="false"
       allow-spec-file-load="false"
       load-fonts="false"
-    ></rapi-doc>
+    >
+    <img
+      slot="logo"
+      src="/static/img/inventree.png"
+      style="width:50px; height:50px"
+    />
+    </rapi-doc>
   </body>
 </html>
