--- a/InvenTree/templates/InvenTree/settings/sidebar.html
+++ b/InvenTree/templates/InvenTree/settings/sidebar.html
@@ -30,6 +30,8 @@
 {% include "sidebar_item.html" with label='login' text=text icon="fa-fingerprint" %}
 {% trans "Barcode Support" as text %}
 {% include "sidebar_item.html" with label='barcodes' text=text icon="fa-qrcode" %}
+{% trans "Project Codes" as text %}
+{% include "sidebar_item.html" with label='project-codes' text=text icon="fa-list" %}
 {% trans "Notifications" as text %}
 {% include "sidebar_item.html" with label='global-notifications' text=text icon="fa-bell" %}
 {% trans "Pricing" as text %}
