--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -31,6 +31,7 @@
 {% include "InvenTree/settings/global.html" %}
 {% include "InvenTree/settings/login.html" %}
 {% include "InvenTree/settings/barcode.html" %}
+{% include "InvenTree/settings/project_codes.html" %}
 {% include "InvenTree/settings/notifications.html" %}
 {% include "InvenTree/settings/label.html" %}
 {% include "InvenTree/settings/report.html" %}
