Edit / delete project codes via API
- Also refactor some existing JS

--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -73,8 +73,41 @@ onPanelLoad('project-codes', function() {
                 field: 'description',
                 sortable: false,
                 title: '{% trans "Description" %}',
+                formatter: function(value, row) {
+                    let html = value;
+                    let buttons = '';
+
+                    buttons += makeEditButton('button-project-code-edit', row.pk, '{% trans "Edit Project Code" %}');
+                    buttons += makeDeleteButton('button-project-code-delete', row.pk, '{% trans "Delete Project Code" %}');
+
+                    html += wrapButtons(buttons);
+                    return html;
+                }
             }
         ]
+    });
+
+    $('#project-code-table').on('click', '.button-project-code-edit', function() {
+        let pk = $(this).attr('pk');
+
+        constructForm(`{% url "api-project-code-list" %}${pk}/`, {
+            title: '{% trans "Edit Project Code" %}',
+            fields: {
+                code: {},
+                description: {},
+            },
+            refreshTable: '#project-code-table',
+        });
+    });
+
+    $('#project-code-table').on('click', '.button-project-code-delete', function() {
+        let pk = $(this).attr('pk');
+
+        constructForm(`{% url "api-project-code-list" %}${pk}/`, {
+            title: '{% trans "Delete Project Code" %}',
+            method: 'DELETE',
+            refreshTable: '#project-code-table',
+        });
     });
 
     $('#new-project-code').click(function() {
@@ -175,11 +208,12 @@ onPanelLoad('category', function() {
                 title: '{% trans "Default Value" %}',
                 sortable: 'true',
                 formatter: function(value, row, index, field) {
-                    var bEdit = "<button title='{% trans "Edit Template" %}' class='template-edit btn btn-outline-secondary' type='button' pk='" + row.pk + "'><span class='fas fa-edit'></span></button>";
-                    var bDel = "<button title='{% trans "Delete Template" %}' class='template-delete btn btn-outline-secondary' type='button' pk='" + row.pk + "'><span class='fas fa-trash-alt icon-red'></span></button>";
+                    let buttons = '';
+                    buttons += makeEditButton('template-edit', row.pk, '{% trans "Edit Template" %}');
+                    buttons += makeDeleteButton('template-delete', row.pk, '{% trans "Delete Template" %}');
 
-                    var html = value
-                    html += "<div class='btn-group float-right' role='group'>" + bEdit + bDel + "</div>";
+                    let html = value
+                    html += wrapButtons(buttons);
 
                     return html;
                 }
@@ -193,6 +227,7 @@ onPanelLoad('category', function() {
         var pk = $(this).attr('pk');
 
         constructForm(`/api/part/category/parameters/${pk}/`, {
+            title: '{% trans "Edit Category Parameter Template" %}',
             fields: {
                 parameter_template: {},
                 category: {
