Fix persist buttons
Fixes "persist form" buttons for the following models:

- Part
- PartCategory
- StockItem
- StockLocation

Closes https://github.com/inventree/InvenTree/issues/4491

--- a/InvenTree/part/templates/part/category.html
+++ b/InvenTree/part/templates/part/category.html
@@ -334,18 +334,8 @@
     });
 
     $("#cat-create").click(function() {
-
-        var fields = categoryFields();
-
-        {% if category %}
-        fields.parent.value = {{ category.pk }};
-        {% endif %}
-
-        constructForm('{% url "api-part-category-list" %}', {
-            fields: fields,
-            method: 'POST',
-            title: '{% trans "Create Part Category" %}',
-            follow: true,
+        createPartCategory({
+            {% if category %}parent: {{ category.pk }},{% endif %}
         });
     });
 
